# django-avatar

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.rst  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  release.yml  test.yml
avatar/: __init__.py  admin.py  apps.py  conf.py  forms.py  handlers.py  models.py  providers.py  settings.py  signals.py  tests.py  urls.py  util.py  utils.py  views.py
avatar/api/: __init__.py  apps.py  conf.py  requirements.txt  serializers.py  shortcut.py  signals.py  urls.py  utils.py  views.py
avatar/api/docs/: avatar.rst  conf.py  index.rst
avatar/api/tests/: tests.py  urls.py
avatar/locale/de/LC_MESSAGES/: django.mo  django.po
avatar/locale/es/LC_MESSAGES/: django.mo  django.po
avatar/locale/fa/LC_MESSAGES/: django.mo  django.po
avatar/locale/fr/LC_MESSAGES/: django.mo  django.po
avatar/locale/it/LC_MESSAGES/: django.mo  django.po
avatar/locale/ja/LC_MESSAGES/: django.mo  django.po
avatar/locale/nl/LC_MESSAGES/: django.mo  django.po
avatar/locale/pl/LC_MESSAGES/: django.mo  django.po
avatar/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
avatar/locale/ru/LC_MESSAGES/: django.mo  django.po
avatar/locale/sk_SK/LC_MESSAGES/: django.mo  django.po
avatar/locale/zh_CN/LC_MESSAGES/: django.mo  django.po
avatar/management/: __init__.py
avatar/management/commands/: import_gravatars.py  migrate_avatars.py  rebuild_avatars.py
avatar/migrations/: 0001_initial.py  0002_add_user_primary_unique_together.py  0002_add_verbose_names_to_avatar_fields.py  0002_auto_20160722_0930.py  0003_auto_20170827_1345.py  __init__.py
avatar/south_migrations/: 0001_initial.py
avatar/templates/avatar/: add.html  avatar_tag.html  base.html  change.html  confirm_delete.html  initials.html
avatar/templates/notification/avatar_friend_updated/: full.txt  notice.html
avatar/templates/notification/avatar_updated/: notice.html
avatar/templates/notifications/avatar_friend_updated/: full.txt  notice.html
avatar/templates/notifications/avatar_updated/: full.txt  notice.html
avatar/templatetags/: avatar_tags.py
avatar/testdata/: nonimagefile  test.tiff
docs/: Makefile  conf.py  index.rst  index.txt  install.txt  make.bat  usage.txt
test_proj/: manage.py
test_proj/test_proj/: settings.py  urls.py  wsgi.py
tests/: requirements.txt  runtests.py  settings.py  tests.py  urls.py
tests/data/: imagefilewithoutext
tests/templates/alt/: add.html  change.html  delete.html
