[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-avatar"
description = "A Django app for handling user avatars"
authors = [{email = "floguy@gmail.com", name = "Eric Florenzano"}]
maintainers = [{email = "johannes@fiduswriter.org", name = "Johannes Wilm"}]
license = {text = "BSD-4-Clause"}
readme = "README.rst"
keywords=["avatar", "django"]
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Intended Audience :: Developers",
        "Framework :: Django",
        "Framework :: Django :: 3.2",
        "Framework :: Django :: 4.0",
        "Framework :: Django :: 4.1",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
    ]
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/jazzband/django-avatar"
repository = "https://github.com/jazzband/django-avatar"
documentation = "https://django-avatar.readthedocs.io"

[tool.setuptools.dynamic]
version = {attr = "avatar.__version__"}
dependencies = {file = "requirements.txt"}
